--- a/form-validator/index.html
+++ b/form-validator/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="form-control">
                 <label for="password2">confirm password</label>
-                <input type="password" id="password2" placeholder="confirm password">
+                <input type="password" id="password2" placeholder="input confirmed password">
                 <small>Error Hint</small>
             </div>
             <button>Submit</button>
